syntax = "proto3";

package auth;
option go_package = "/";
service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string fullname = 1;
  string username = 2;
  string password = 3;
}

message RegisterResponse {
  string message = 1;
  string token = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
