package test

import (
	"context"
	"net"
	"testing"

	"google.golang.org/grpc"

	"github.com/your/repo/auth"
)

// Mock implementation of AuthServiceServer
type mockAuthServiceServer struct {
	auth.UnimplementedAuthServiceServer
}

func (s *mockAuthServiceServer) Register(ctx context.Context, req *auth.RegisterRequest) (*auth.RegisterResponse, error) {
	// Implement mock logic for Register method
	return &auth.RegisterResponse{Success: true}, nil
}

func (s *mockAuthServiceServer) Login(ctx context.Context, req *auth.LoginRequest) (*auth.LoginResponse, error) {
	// Implement mock logic for Login method
	return &auth.LoginResponse{Token: "mock_token"}, nil
}

func startTestServer(t *testing.T) (*grpc.ClientConn, func()) {
	server := grpc.NewServer()
	auth.RegisterAuthServiceServer(server, &mockAuthServiceServer{})

	listener, err := net.Listen("tcp", "localhost:0")
	if err != nil {
		t.Fatalf("failed to listen: %v", err)
	}

	go server.Serve(listener)

	conn, err := grpc.Dial(listener.Addr().String(), grpc.WithInsecure())
	if err != nil {
		t.Fatalf("failed to dial server: %v", err)
	}

	return conn, func() {
		server.Stop()
		listener.Close()
	}
}

func TestAuthService_Register(t *testing.T) {
	conn, cleanup := startTestServer(t)
	defer cleanup()

	client := auth.NewAuthServiceClient(conn)
	req := &auth.RegisterRequest{
		// Fill in the request fields
	}
	res, err := client.Register(context.Background(), req)
	if err != nil {
		t.Fatalf("Register failed: %v", err)
	}

	if !res.Success {
		t.Errorf("expected success, got failure")
	}
}

func TestAuthService_Login(t *testing.T) {
	conn, cleanup := startTestServer(t)
	defer cleanup()

	client := auth.NewAuthServiceClient(conn)
	req := &auth.LoginRequest{
		// Fill in the request fields
	}
	res, err := client.Login(context.Background(), req)
	if err != nil {
		t.Fatalf("Login failed: %v", err)
	}

	expectedToken := "mock_token"
	if res.Token != expectedToken {
		t.Errorf("expected token %q, got %q", expectedToken, res.Token)
	}
}
